--- a/dna/CHANGELOG.txt
+++ b/dna/CHANGELOG.txt
@@ -1,3 +1,8 @@
+Version 0.5.4:
+
+Add lastest interactive governor (faux123)
+Update ondemand governor to the latext (faux123)
+
 Version 0.5.3: Voltage control (faux123)
 Version 0.5.2: Force fast-charge / unknown chargers (dsb9938)
 Version 0.5.1: Various optimizations and improved algorithms.  (faux123)
