--- a/dna/CHANGELOG.txt
+++ b/dna/CHANGELOG.txt
@@ -1,3 +1,4 @@
+Version 0.7.3: underclock to 192
 Version 0.7.2: Disable GPU_OVERCLOCK
 Version 0.7.1: Fix a crash on latest Linux
 Version 0.7.0: Merge Linux up to 3.4.28
