--- a/dna/CHANGELOG.txt
+++ b/dna/CHANGELOG.txt
@@ -1,3 +1,4 @@
+Version 0.7.5: remove some hsic debugging
 Version 0.7.4: Add BFQ
 Version 0.7.3: underclock to 192
 Version 0.7.2: Disable GPU_OVERCLOCK
