--- a/dna/CHANGELOG.txt
+++ b/dna/CHANGELOG.txt
@@ -1,3 +1,5 @@
+Version 0.8.0: dsb9938's overclocking tables
+
 Version 0.7.8:
 
  * Interactive governor changes (harsh squashing of Google changes)
