--- a/dna/CHANGELOG.txt
+++ b/dna/CHANGELOG.txt
@@ -1,3 +1,4 @@
+Version 0.9.2: simple_plug cleanup / allow the period to be set
 Version 0.9.1:
  * dsb9938: grab some more overclocking settings I missed
  * simple_plug: more responsive, more knobs
